# JI

./: .gitignore  AI-Index_产品规划_V1.0.md  README.md  RESEARCH.md  app.py  config.example.yaml  config.yaml  pyproject.toml  requirements.txt
.streamlit/: config.toml
examples/: hello_page_plugin.py
jijin/: __init__.py  __main__.py  cli.py  concurrency.py  config.py
jijin/agents/: __init__.py  coach.py
jijin/alert/: __init__.py  position.py  smart.py
jijin/data/: __init__.py  cache.py  fund.py  macro.py  market.py  valuation.py
jijin/engine/: __init__.py  calibrate.py  macro.py  scoring.py  settings.py  trend.py
jijin/pages/: __init__.py  alerts.py  dashboard.py  holdings.py  opportunities.py  parameters.py  portfolio.py  score.py
jijin/plugin/: __init__.py  base.py  loader.py  registry.py
jijin/plugins_builtin/: __init__.py  agents.py  alerts.py  data_providers.py  pages.py  strategies.py
jijin/portfolio/: __init__.py  holdings.py
jijin/screener/: __init__.py  index_fund.py  opportunity.py
jijin/strategy/: __init__.py  generator.py
jijin/ui/: __init__.py  constants.py  loading.py  shell.py  state.py  style.py  widgets.py
jijin/utils/: bg_job.py  http_patch.py  timeout.py
tests/: test_calibrate.py  test_engine_settings.py  test_helpers.py  test_macro_engine.py  test_market_indexes.py  test_opportunity_scan.py  test_plugins.py  test_trend_engine.py
