[project]
name = "jijin"
version = "0.1.0"
description = "个人指数基金选购与加减仓提醒工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "akshare>=1.14.0",
  "pandas>=2.0.0",
  "pandas-ta-classic>=0.6.52",
  "pyyaml>=6.0",
  "rich>=13.0.0",
  "streamlit>=1.32.0",
]

[project.scripts]
jijin = "jijin.cli:main"

[project.entry-points."jijin.plugins"]
# 第三方可在此挂载：my_plugin = "my_pkg.plugins:register"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["jijin*"]
